# QScout

./: 2026-07-16 Project Backup.md  2026-07-17 Backup.md  Makefile  Q Scout Native Linux Backup 18-07.md  README.md  pyproject.toml  start_project.sh
docs/: A4.3_HUMAN_REVIEW_GATE.md  A4.4_CLEANUP_EXECUTION_PLAN.md  A4.5_CLEANUP_EXECUTION_REPORT.md  A5.1_PHASE_COMPLETION_REPORT.md  A5.2_TASK_RECONCILIATION_REPORT.md  A5_OPERATIONAL_VALIDATION_PLAN.md  A5_OPERATIONAL_VALIDATION_REPORT.md  ARCHITECTURE_CLEANUP_PLAN.md  BOOTSTRAP_SYSTEM.md  CONTROL_CENTER.md  METRIC_DEFINITIONS.md  MULTI_AGENT_ARCHITECTURE_AUDIT.md  MULTI_AGENT_INFRASTRUCTURE_FINAL_REPORT.md  MULTI_AGENT_PROJECT_CLOSURE.md  MULTI_AGENT_PROJECT_COMPLETION_REPORT.md  QScout_API_Audit_Report.md  QScout_Firmware_Forensic_Report.md  QScout_Initial_Analysis_Report.md  QScout_Library_Audit_Report.md  QScout_MyQode_Forensic_Report.md  QScout_Observed_Differences.md  QScout_Physical_Validation_Report.md  QScout_Project_Consolidation_Report.md  QScout_Protocol_Coverage_Report.md  QScout_Protocol_JS_Internal_Mechanism.md  QScout_Protocol_Validation_Report.md  QScout_RB_Protocol_Specification.md  QScout_Reference_Packets.md  QScout_Repository_Consolidation_Report.md  QScout_Response_Action_Code_Analysis.md  QScout_Response_Matching_Mechanism.md  QScout_v1.0_Release_Notes.md  RB_Protocol_v1.0.md  SDK_02_PHASE_2C_BASELINE.md  SDK_02_PHASE_2C_BASELINE_REPORT.md  SDK_CAPABILITY_AUDIT.md  SDK_PHASE_2C_RESUMPTION_REPORT.md  TASK_CONSISTENCY_REPORT.md  T_FIX_01_REPORT.md  VALIDATION_A5_AUDIT_REPORT.md  (+5 more)
examples/: full_demo.py  (+1 more)
(+77 files in other folders)
