[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "qscout"
version = "1.0.0"
description = "Native Python library for Robobloq Q-Scout (RB-00002)"
requires-python = ">=3.10"
dependencies = ["pyserial"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
